--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,4 +54,8 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+    implementation 'com.google.mlkit:text-recognition:16.0.0'
+
+
+
 }
